fixing touch drag on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -21,3 +21,7 @@
 .task > ::-webkit-scrollbar-thumb{
    @apply bg-sky-500 rounded-xl;
 }
+
+.draggable-item {
+   touch-action: none;
+ }
